parser/testdata/invalid/missing_block_name.oc
# Error: block keyword without a name identifier.
model {
  provider = "openai"
}
